hide scrollbar in dropdown search component

--- a/src/components/Global/DropdownSearch/DropdownSearch.module.css
+++ b/src/components/Global/DropdownSearch/DropdownSearch.module.css
@@ -23,7 +23,7 @@
 .dropdown_content {
     display: flex;
     width: 340px;
-    overflow-y: scroll;
+    overflow-y: hidden;
 
     flex-direction: column;
 
@@ -44,7 +44,7 @@
     cursor: pointer;
 }
 
-.option_button:hover{
+.option_button:hover {
     border: 1px solid var(--accent, #7371fc);
     color: var(--accent, #7371fc);
     transition: all var(--animation-speed) ease-in-out;
