--- a/src/components/Global/DropdownSearch/DropdownSearch.module.css
+++ b/src/components/Global/DropdownSearch/DropdownSearch.module.css
@@ -23,12 +23,16 @@
 .dropdown_content {
     display: flex;
     width: 340px;
-    overflow-y: hidden;
+    overflow-y: auto;
 
     flex-direction: column;
 
     gap: 8px;
 }
+
+.dropdown_content::-webkit-scrollbar {
+    display: none;
+  }
 
 .option_button {
     display: flex;
