--- a/src/components/Global/Account/AccountTabs/Wallet/Wallet.module.css
+++ b/src/components/Global/Account/AccountTabs/Wallet/Wallet.module.css
@@ -4,12 +4,9 @@
 
 .item_container {
     height: calc(100% - 24px);
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     padding: 0 8px;
+    
 }
 
-.item_container::-webkit-scrollbar {
-    width: 1px;
-    display: none;
-}
