--- a/src/css/GlobalCssClassnames.css
+++ b/src/css/GlobalCssClassnames.css
@@ -205,10 +205,10 @@ aside.emoji-picker-react {
 }
 
 @media (max-width: 500px) {
-    #current_row_scroll {
+    /* #current_row_scroll {
         overflow-y: scroll;
         height: 45dvh;
-    }
+    } */
     .css-th9gsg-MuiPaper-root-MuiAlert-root{
         margin: 0 auto !important;
         text-wrap:wrap !important;
