change point alignment on mobile and add leaderboard link

--- a/src/components/Global/Account/AccountTabs/Points/Points.module.css
+++ b/src/components/Global/Account/AccountTabs/Points/Points.module.css
@@ -21,3 +21,15 @@
     display: flex;
     flex-direction: row;
 }
+
+.point_value{
+    text-align: end;
+}
+
+
+@media only screen and (min-width: 768px) {
+.point_value{
+    text-align: start;
+}
+
+}
