--- a/src/css/GlobalCssClassnames.css
+++ b/src/css/GlobalCssClassnames.css
@@ -132,6 +132,7 @@ aside.emoji-picker-react {
 .introjs-tooltipbuttons a {
     /* font-size: 1.2rem; */
     color: var(--accent5);
+    border: none;
     /* font-weight: 700; */
 }
 
@@ -140,6 +141,11 @@ aside.emoji-picker-react {
     border: none !important;
     outline: none !important;
 }
+
+.introjs-button:focus{
+    box-shadow: none !important;
+}
+
 .introjs-tooltipbuttons {
     position: fixed;
     right: 51.14px;
@@ -148,6 +154,7 @@ aside.emoji-picker-react {
 
     box-shadow: var(--glow-box-shadow);
     border-radius: var(--border-radius);
+    background: var(--dark2) !important;
 }
 
 /* .MuiPagination-root{
@@ -226,4 +233,22 @@ aside.emoji-picker-react {
    .mobile_auto_height{
     height: auto !important;
    }
+}
+
+#tutorial_first_step{
+    position: fixed;
+    left: 50vw;
+    top: 30vh;
+    display: block;
+    width: 0;
+    height: 0;
+}
+
+.tutoTooltipClass{
+    background: var(--dark1) !important;
+}
+
+.tutoHighlightClass{
+    box-shadow: color-mix(in srgb, var(--accent1) 50%, transparent) 0px 0px 1px 2px, color-mix(in srgb, var(--accent1) 10%, transparent) 0px 0px 0px 5000px !important;
+    /* box-shadow: color-mix(in srgb, var(--accent1) 50%, transparent) 0px 0px 1px 2px, color-mix(in srgb, black 80%, transparent) 0px 0px 0px 5000px !important; */
 }
