--- a/src/components/Global/ContentContainer/ContentContainer.module.css
+++ b/src/components/Global/ContentContainer/ContentContainer.module.css
@@ -127,7 +127,9 @@
 
     .swap_route,
     .no_background {
-        /* width: 95%; */
+        width: 95%;
+    
+     
         overflow-y: scroll;
     }
 }
