--- a/src/components/Global/FooterNav/FooterNav.module.css
+++ b/src/components/Global/FooterNav/FooterNav.module.css
@@ -2,18 +2,22 @@
     position: fixed; 
     bottom: 0; 
     left: 0; 
+    right: 0;
     width: 100%; 
    
     display: flex;
     justify-content: space-around;
     align-items: center;
     background-color: var(--dark3);
-    padding: 15px 10px;
+    /* padding: 15px 10px; */
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
     box-shadow: 0px 5px 40px rgba(0, 0, 0, 0.8);
     height: 56px;
     z-index: 100; 
+    width: 98%;
+    margin: 0 auto;
+
   }
   
   .navItem {
@@ -50,7 +54,7 @@
   
   @media (max-width: 480px) {
     .nav {
-      padding: 10px 5px;
+      padding: 10px;
     }
   
     .navItem {
