--- a/src/components/Chat/FullChat/FullChat.module.css
+++ b/src/components/Chat/FullChat/FullChat.module.css
@@ -1,7 +1,7 @@
 .main_container,
 .main_container_close {
     padding: 1rem;
-    height: calc(100vh - 7.5rem);
+    height: calc(100svh - 7.5rem);
 }
 
 .left_container {
@@ -93,7 +93,7 @@
 .chat_main_container {
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 12rem);
+    height: calc(100svh - 12rem);
 
     /* min-height: 500px;
    max-height: 600px; */
@@ -240,7 +240,7 @@
         display: block;
     }
     .chat_main_container {
-        height: 80vh;
+        height: 80svh;
     }
 }
 
