style scrol to top button

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -286,3 +286,20 @@ input[type='number'] {
         background: var(--dark1);
     }
 }
+
+
+.scroll_to_top_button{
+    position: absolute;
+    right: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 8px;
+    background: var(--accent1);
+    border-bottom-left-radius: 4px;
+    color: var(--text1);
+    padding: 8px;
+    outline: none;
+    border: none;
+    z-index: 2;
+}
