--- a/src/pages/Portfolio/Portfolio.module.css
+++ b/src/pages/Portfolio/Portfolio.module.css
@@ -8,6 +8,16 @@
     gap: 16px;
 }
 
+.mobile_container{
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  margin: 0 auto;
+  padding: 0 8px;
+  /* height: calc(100dvh - 112px); */
+  overflow-y: hidden !important;
+  
+}
 .portfolio_tabs_container {
     width: 100%;
     display: grid;
@@ -17,16 +27,6 @@
   }
   
 
-  .mobile_container{
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
-    margin: 0 auto;
-    padding: 0 8px;
-    height: calc(100dvh - 112px);
-    overflow-y: hidden !important;
-    
-  }
 
   .mobile_data_toggle_container{
     background: var(--dark2);
@@ -97,5 +97,6 @@
     .portfolio_container {
         overflow-y: hidden;
         max-height: calc(100svh - 7.5rem);
+      
     }
 }
