Add x-index into dropdown css

--- a/src/components/Chat/MessagePanel/Room/Room.module.css
+++ b/src/components/Chat/MessagePanel/Room/Room.module.css
@@ -86,6 +86,7 @@
     background: var(--dark3);
     padding: 1px;
     border-radius: var(--border-radius);
+    z-index: 100;
 }
 
 .dropdown_btn {
