add nav buttons for tuto tooltips, key listener for tuto component

--- a/src/components/Global/TutorialComponent/TutorialComponent.module.css
+++ b/src/components/Global/TutorialComponent/TutorialComponent.module.css
@@ -105,6 +105,13 @@
     transform: translateX(-70%);
 }
 
+.tooltip_buttons_wrapper{
+    display: flex;
+    
+    justify-content: center;
+    padding-bottom: 1rem;
+}
+
 .step_btn{
     transition: all .2s ease-in-out;
     padding: .5rem 1rem;
