--- a/src/App/App.css
+++ b/src/App/App.css
@@ -289,3 +289,15 @@ input[type='number'] {
 }
 
 
+.trial_work{
+    width: 100vw;
+    height: calc(100dvh - 115px);
+
+    display: grid;
+    grid-template-rows: 105px 1fr;
+    gap: 4px;
+    outline: 1px solid green;
+}
+.trial_work > *{
+outline: 1px solid blue;
+}
