--- a/src/components/Portfolio/PortfolioTabs/PortfolioTabs.module.css
+++ b/src/components/Portfolio/PortfolioTabs/PortfolioTabs.module.css
@@ -6,6 +6,35 @@
     background: var(--dark1);
     align-items: stretch;
   }
+
+  .mobile_tabs_container{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+
+  .mobile_tabs_button_container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 8px;
+  }
+
+  .mobile_tabs_button_container button{
+    background: transparent;
+    outline: none;
+    color: var(--text2);
+    border: none;
+    border-bottom:  1px solid transparent;
+    font-size: 12px;
+    cursor: pointer;
+
+  }
+
+  .tabActive{
+    color: var(--accent1);
+    border-bottom: 1px solid var(--accent1);
+  }
   
   @media only screen and (min-device-width: 320px) and (max-device-width: 1200px) and (-webkit-min-device-pixel-ratio: 2) {
     .portfolio_tabs_container {
