--- a/src/components/Portfolio/PortfolioTabs/PortfolioTabs.module.css
+++ b/src/components/Portfolio/PortfolioTabs/PortfolioTabs.module.css
@@ -5,6 +5,7 @@
     border-radius: var(--border-radius);
     background: var(--dark1);
     align-items: stretch;
+    flex: 1;
   }
 
   .mobile_tabs_container{
