--- a/src/pages/Portfolio/Portfolio.module.css
+++ b/src/pages/Portfolio/Portfolio.module.css
@@ -86,14 +86,13 @@ overflow: hidden !important;
 
     display: grid;
     grid-template-rows: 105px 1fr ;
+    gap: 4px;
 
   
-    outline: 1px solid green;
+   
     overflow: hidden;
 }
-.mobile_layout > *{
-outline: 1px solid blue;
-}
+
   @media (min-width: 1200px) {
     .portfolio_tabs_container.fullLayoutContainer {
       grid-template-columns: auto 36px;
