--- a/src/pages/Trade/Trade.module.css
+++ b/src/pages/Trade/Trade.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
    width: 100%;
    height: 100%;
-   gap: 8px;
+   gap: 1rem;
    
    
 }
@@ -53,4 +53,16 @@
 .conv_rate{
     font-size: var(--body-size);
     line-height: var(--body-lh);
+}
+
+@media (min-width: 500px) and (max-width: 768px) {
+    .mobile_container {
+        padding: 1rem;
+        
+        margin: 0 auto;
+        max-width: 600px;
+        margin-top: 1rem;
+       
+       
+    }
 }
