--- a/src/components/Trade/TradeModules/TradeModuleHeader.module.css
+++ b/src/components/Trade/TradeModules/TradeModuleHeader.module.css
@@ -1,3 +1,24 @@
+.main_container{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    font-size: var(--header1-size);
+    color: var(--text2)
+}
+
+.main_container svg {
+    color: var(--text2);
+    height: 20px;
+    width: 20px;
+}
+
+.main_container svg:hover {
+    color: var(--accent1) !important;
+}
+
+
 .mobile_container{
     width: 100%;
   
@@ -26,3 +47,11 @@
     border-radius: var(--border-radius);
 }
 
+.token_pair{
+    color: var(--text1);
+    font-size: var(--header1-size);
+    cursor: pointer;
+}
+.swap_title{
+    color: var(--text1);
+}
