--- a/src/pages/Trade/Trade.module.css
+++ b/src/pages/Trade/Trade.module.css
@@ -13,19 +13,22 @@
 } */
 
 .mobile_tabs_container{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+    
     padding: 0 1rem;
+
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    align-items: center;
+    gap: 8px;
     
 }
 .mobile_tabs_container button{
+    width: 100%;
     background: var(--dark3);
     outline: none;
     border: 1px solid transparent;
     color: var(--text2);
-    padding: 2px 1rem;
+    padding: 2px 0;
     border-radius: 25px;
     font-size: 12px;
 }
@@ -47,7 +50,7 @@
     flex-direction: row;
     align-items: center;
     gap: 4px;
-    font-size: 12px;
+    font-size: var(--header1-size);
 }
 
 .conv_rate{
@@ -64,5 +67,11 @@
         margin-top: 1rem;
        
        
+    }
+
+    .mobile_tabs_container button{
+      
+        padding: 5px 0;
+        
     }
 }
