--- a/src/components/Global/Explore/DexTokens.module.css
+++ b/src/components/Global/Explore/DexTokens.module.css
@@ -1,3 +1,111 @@
+
+
+/* ------------------------------------------- */
+
+/* ----------------------------------- */
+.mainContainer{
+    box-sizing: border-box;
+    width: 100%;
+    /* max-width: 1500px; */
+    margin: auto;
+    /* border: 1px solid var(--dark3); */
+    border-radius: 4px;
+    /* padding: 8px; */
+    overflow-x: auto;
+    position: relative;
+
+    height: calc(100vh - 64px);
+    overflow-y: hidden;
+    background: var(--dark1);
+   
+}
+
+.headerContainer{
+    box-sizing: border-box;
+    width: 100%;
+   
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    min-width: 100%;
+    height: 40px;
+   
+    gap: 4px;
+   
+    overflow-x: auto; 
+    white-space: nowrap; 
+    /* because this is the header */
+
+   border-bottom: 1px solid var(--dark3);
+    position: sticky;
+    top: 0;
+    z-index: 100;
+   
+    
+}
+
+.headerItems{
+    color: var(--text2);
+    font-size: var(--body-size);
+}
+.gridHeaderItem{
+    box-sizing: border-box;
+    display: flex;
+    flex-grow: 1;
+    /* background: var(--dark2); */
+    flex-shrink: 0;
+    min-width: 0;
+    min-height: 0;
+    align-items: center;
+    gap: 2px;
+    
+    /* width: 133px; */
+   
+    padding: 0 8px;
+    font-size: var(--body-size);
+    width: 60px;
+    /* justify-content: center; */
+   
+
+   
+    
+}
+.contentContainer {
+    height: calc(100% - 64px); /* Adjust this value based on your header's height */
+    overflow-y: auto; /* Make only the content scrollable */
+    scrollbar-gutter: stable; /* This will keep the layout stable when the scrollbar appears */
+   
+    
+    padding-right: 1rem;
+
+}
+
+.borderRight{
+    height: 100%;
+    width: 2px;
+    position: absolute;
+    background-color: var(--dark3);
+    right: 10px;
+}
+
+
+
+.tokens{
+   
+   display: flex;
+   justify-content: flex-start !important;
+}
+
+
+.tradeButton{
+    width: 25px;
+   
+}
+
+
+ .poolName{
+   justify-content: flex-start !important; 
+}
 .no_results{
     width: 100%;
     height: 200px;
@@ -7,7 +115,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-size: var(--header2-size);
+    font-size: 14px;
     gap: 8px;
 }
 
@@ -37,9 +145,37 @@
     color: var(--text2)
 }
 
+
 @media only screen and (min-width: 768px) {
-.no_results{
-    height: 70%;
+    .no_results{
+        height: 70%;
+    }
+
+    .headerContainer{
+        gap: 8px;
+    }
+
+
+.gridHeaderItem{
+   
+    width: 70px;
+    justify-content: flex-end;
+   
+   
 }
+
+
+.tradeButton{
+    width: 70px;
+}
+}
+
+@media only screen and (min-width: 1024px) {
+    .headerItems, .gridHeaderItem{
+        font-size: 14px;
+    }
+    .gridHeaderItem, .tradeButton, .tradeButton, .poolName{
+        width: 133px;
+    }
 
 }
