--- a/src/pages/Explore/Explore.module.css
+++ b/src/pages/Explore/Explore.module.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     gap: 16px;
+    height: calc(100vh - 64px);
 }
 
 .main_wrapper{
@@ -127,4 +128,125 @@
     .main_container {
         height: calc(100svh - 82px);
     }
+}
+
+
+/* ----------------------------------- */
+.myContainer{
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+   
+    /* max-width: 1500px; */
+    margin: auto;
+    /* border: 1px solid var(--dark3); */
+    border-radius: 4px;
+    /* padding: 8px; */
+    overflow-x: auto;
+    position: relative;
+
+    /* height: calc(100vh - 64px); */
+    overflow-y: hidden;
+   
+}
+
+.gridContainer{
+    box-sizing: border-box;
+    width: 100%;
+   
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    min-width: 100%;
+    min-height: 64px;
+   
+    gap: 4px;
+   
+    overflow-x: auto; 
+    white-space: nowrap; 
+    /* because this is the header */
+  
+    padding-right: 1rem;
+
+   
+    position: sticky;
+    top: 0;
+    z-index: 100;
+   
+    
+}
+
+.gridItem{
+    box-sizing: border-box;
+    display: flex;
+    flex-grow: 1;
+    /* background: var(--dark2); */
+    flex-shrink: 0;
+    min-width: 0;
+    min-height: 0;
+    align-items: stretch;
+    
+    /* width: 133px; */
+   
+    padding: 0 8px;
+    font-size: 12px;
+    width: 60px;
+    /* justify-content: center; */
+   
+
+   
+    
+}
+.contentContainer {
+    height: calc(100% - 64px); /* Adjust this value based on your header's height */
+    overflow-y: auto; /* Make only the content scrollable */
+    scrollbar-gutter: stable; /* This will keep the layout stable when the scrollbar appears */
+
+}
+
+.tokens{
+    width: 100%;
+   display: flex;
+   /* justify-content: flex-start !important; */
+}
+
+
+.tradeButton{
+    width: 25px;
+   
+}
+
+
+ .poolName{
+   /* justify-content: flex-start !important; */
+   width: 30px;
+  
+  
+}
+
+@media only screen and (min-width: 768px) {
+
+    .gridContainer{
+        gap: 8px;
+    }
+
+
+.gridItem{
+    font-size: 16px;
+    width: 70px;
+    justify-content: flex-end;
+   
+   
+}
+
+.tradeButton, .poolName{
+    width: 70px;
+        }
+}
+
+@media only screen and (min-width: 1024px) {
+    .gridItem, .tradeButton, .tradeButton, .poolName{
+        width: 133px;
+    }
+
 }
