--- a/src/components/Global/Explore/TopPools/TopPools.module.css
+++ b/src/components/Global/Explore/TopPools/TopPools.module.css
@@ -44,6 +44,7 @@
     position: sticky;
     top: 0;
     z-index: 100;
+    padding-left: 8px;
    
     
 }
@@ -79,8 +80,11 @@
     overflow-y: auto; /* Make only the content scrollable */
     scrollbar-gutter: stable; /* This will keep the layout stable when the scrollbar appears */
    
-    
+   
     padding-right: 1rem;
+    padding-bottom: 1rem;
+
+   
 
 }
 
