refactor toggle on mobile

--- a/src/components/Global/Explore/ExploreToggle/ExploreToggle.module.css
+++ b/src/components/Global/Explore/ExploreToggle/ExploreToggle.module.css
@@ -19,3 +19,16 @@ padding: 4px;
    color: var(--accent1) !important ;
    border-bottom: 1px solid var(--accent1) !important;
 }
+
+@media only screen and (max-width: 768px) {
+.container{
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.container button{
+    width: 100%;
+}
+
+}
