--- a/src/components/Global/Explore/TokenRow/TokenRow.module.css
+++ b/src/components/Global/Explore/TokenRow/TokenRow.module.css
@@ -28,7 +28,8 @@
     align-items: stretch;
     font-size: 12px;
     width: 60px;
-    justify-content: center;
+    justify-content: end;
+    
     
    
    
