remove analytics styled component file

--- a/src/components/Global/Explore/TopPools/TopPools.module.css
+++ b/src/components/Global/Explore/TopPools/TopPools.module.css
@@ -130,6 +130,17 @@
     gap: 8px;
 }
 
+.spinner_container{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .no_results button{
     width: 100%;
     max-width: 200px;
