--- a/src/components/Global/FooterNav/FooterNav.module.css
+++ b/src/components/Global/FooterNav/FooterNav.module.css
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    background-color: var(--dark3);
+    background-color: var(--dark1);
     /* padding: 15px 10px; */
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
@@ -18,6 +18,7 @@
     width: 98%;
     margin: 0 auto;
     padding: 10px;
+    border-top: 1px solid var(--dark3);
 
   }
   
