--- a/src/pages/Trade/Trade.module.css
+++ b/src/pages/Trade/Trade.module.css
@@ -56,6 +56,11 @@
 .conv_rate{
     font-size: var(--body-size);
     line-height: var(--body-lh);
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 8px;
 }
 
 @media (min-width: 500px) and (max-width: 768px) {
