--- a/src/components/Global/TutorialOverlay/TutorialOverlayUrlBased.module.css
+++ b/src/components/Global/TutorialOverlay/TutorialOverlayUrlBased.module.css
@@ -10,6 +10,18 @@
     border-radius: 100vw;
     font-size: 1.3rem;
     cursor: pointer;
+    animation: opaAnim .5s ease-in-out forwards;
+    opacity: 0;
+
+}
+
+@keyframes opaAnim{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
 }
 
 .not_connected{
