refactor time frame content into mobile settings modal

--- a/src/components/Global/Modal/Modal.module.css
+++ b/src/components/Global/Modal/Modal.module.css
@@ -113,6 +113,8 @@
         border-top-right-radius: 8px;
         border-bottom: none;
         width: 100svw;
+
+        border-color: var(--dark3);
        
         /* min-height: 80vh; */
     }
