--- a/src/pages/Trade/TradeCharts/TradeCharts/TradeCharts.module.css
+++ b/src/pages/Trade/TradeCharts/TradeCharts/TradeCharts.module.css
@@ -31,7 +31,69 @@
     box-shadow: var(--glow-light-box-shadow);
 }
 
+.time_frame_container{
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+
+    width: 100%;
+    min-height: 300px;
+    padding: 8px;
+    /* justify-content: flex-start;
+    align-items: start; */
+    
+}
+
+.mobile_settings_row{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+.mobile_settings_header{
+    font-size: var(--body-size);
+    line-height: var(--body-lh);
+    color: var(--text2);
+    
+}
+.settings_apply_button_container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 1rem;
+}
+.settings_apply_button_container button{
+    background: var(--accent1);
+    color: var(--text1);
+    padding: 8px 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: var(--body-size);
+    line-height: var(--body-lh);
+
+    transition: all 0.3s ease-in-out;
+    width: 200px;
+
+    
+    
+}
+
 @media screen and (min-width: 768px) {
+
+    .time_frame_container{
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        background: transparent;
+        min-height: 0;
+        padding: 0;
+        gap: 0;
+    }
+    .mobile_settings_header{
+        display: none;
+    }
     .active_selected_button:hover,
     .non_active_selected_button:hover {
         /* background: var(--title-gradient); */
