add bg to swap, scrollbar to home, and fix cutoff on token quantity

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -15,10 +15,10 @@
 
 /* ===== Scrollbar CSS ===== */
 /* Firefox */
-.content-container,
+/* .content-container,
 .content-container-trade {
     scrollbar-width: none;
-}
+} */
 
 body::-webkit-scrollbar {
     display: none;
