--- a/src/App/App.css
+++ b/src/App/App.css
@@ -232,19 +232,19 @@ input[type='number'] {
     -moz-appearance: textfield;
 }
 .custom_scroll_ambient {
-    height: 400px; /* Adjust the height as needed */
-    overflow-y: scroll !important;
+    overflow-y: auto !important;
+   
 }
-
-.custom_scroll_ambient::-webkit-scrollbar {
-    width: 12px !important; /* Adjust the width as needed */
+.custom_scroll_ambient::-webkit-scrollbar,
+.content-container::-webkit-scrollbar {
+    width: 8px !important; /* Adjust the width as needed */
 }
-
-.custom_scroll_ambient::-webkit-scrollbar-thumb {
+.custom_scroll_ambient::-webkit-scrollbar-thumb,
+.content-container::-webkit-scrollbar-thumb {
     border: 2px solid transparent !important; /* Space for the border */
     background-clip: padding-box !important; /* Create space for the border */
     border-radius: 8px !important; /* Adjust the border radius as needed */
-    background-image: linear-gradient(#000, #000),
+    background-image: linear-gradient(#06060c, #06060c),
         linear-gradient(
             0deg,
             var(--accent1) 0%,
@@ -253,15 +253,18 @@ input[type='number'] {
         ) !important;
     background-origin: border-box !important;
     background-clip: content-box, border-box !important; /* Clip the border to show gradient */
-    min-height: 50px !important; /* Set the minimum height for the scrollbar thumb */
+    min-height: 50px !important; /* Set the minimum height for the scrollbar thumb */;
+   
+    
+    
 }
-
-.custom_scroll_ambient::-webkit-scrollbar-track {
-    background: #000 !important; /* Background color of the scrollbar track */
+.custom_scroll_ambient::-webkit-scrollbar-track,
+.content-container::-webkit-scrollbar-track {
+    background: #06060c !important; /* Background color of the scrollbar track */
     border-radius: 8px !important; /* Adjust the border radius as needed */
-    padding: 2px !important; /* Add padding to the track */
+    padding: 2px !important; /* Add padding to the track */;
+  
 }
-
 /* -----------------------FUTA------------ */
 
 .futa_main {
