--- a/src/pages/common/FAQ/FAQ.module.css
+++ b/src/pages/common/FAQ/FAQ.module.css
@@ -1,5 +1,5 @@
 .background {
-    background: url(src/assets/images/backgrounds/background.png) no-repeat;
+    background: url(../../../assets/images/backgrounds/background.png) no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
