--- a/src/pages/platformAmbient/Level/Level.module.css
+++ b/src/pages/platformAmbient/Level/Level.module.css
@@ -1,5 +1,5 @@
 .level_page_container {
-    background: url(../../assets/images/backgrounds/level_bg.png) no-repeat;
+    background: url(../../../assets/images/backgrounds/level_bg.png) no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -17,8 +17,8 @@
     align-items: flex-start;
     gap: 10px;
     border-radius: 50px;
-    border: 1px solid var(--dark3, #242F3F);
-    background: var(--dark1, #0D1117);
+    border: 1px solid var(--dark3, #242f3f);
+    background: var(--dark1, #0d1117);
     font-size: var(--body-size);
     line-height: var(--body-lh);
     color: var(--text-white);
