--- a/src/components/Global/Explore/TopPools/TopPools.module.css
+++ b/src/components/Global/Explore/TopPools/TopPools.module.css
@@ -178,6 +178,16 @@
     .tradeButton,
     .tradeButton,
     .poolName {
+        width: 100px;
+       
+    }
+}
+@media only screen and (min-width: 1280px) {
+    .gridHeaderItem,
+    .tradeButton,
+    .tradeButton,
+    .poolName {
         width: 133px;
+       
     }
 }
