--- a/src/components/Global/Explore/DexTokens/DexTokens.module.css
+++ b/src/components/Global/Explore/DexTokens/DexTokens.module.css
@@ -1,9 +1,7 @@
-
-
 /* ------------------------------------------- */
 
 /* ----------------------------------- */
-.mainContainer{
+.mainContainer {
     box-sizing: border-box;
     width: 100%;
     /* max-width: 1500px; */
@@ -19,36 +17,33 @@
     background: var(--dark1);
     border: 1px solid var(--dark3);
     border-radius: 4px;
-   
 }
 
-.headerContainer{
+.headerContainer {
     box-sizing: border-box;
     width: 100%;
-   
+
     display: flex;
     flex-direction: row;
     align-items: center;
     min-width: 100%;
     height: 40px;
-   
+
     gap: 4px;
-   
-    overflow-x: auto; 
-    white-space: nowrap; 
-   border-bottom: 1px solid var(--dark3);
+
+    overflow-x: auto;
+    white-space: nowrap;
+    border-bottom: 1px solid var(--dark3);
     position: sticky;
     top: 0;
     padding-left: 8px;
-   
-    
 }
 
-.headerItems{
+.headerItems {
     color: var(--text2);
     font-size: var(--body-size);
 }
-.gridHeaderItem{
+.gridHeaderItem {
     box-sizing: border-box;
     display: flex;
     flex-grow: 1;
@@ -61,24 +56,19 @@
     font-size: var(--body-size);
     width: 60px;
     justify-content: end;
-
-   
-
-   
-    
 }
 .contentContainer {
-    height: calc(100% - 64px); /* Adjust this value based on your header's height */
+    height: calc(
+        100% - 64px
+    ); /* Adjust this value based on your header's height */
     overflow-y: auto; /* Make only the content scrollable */
     scrollbar-gutter: stable; /* This will keep the layout stable when the scrollbar appears */
-   
-    
+
     padding-right: 1rem;
     padding-bottom: 1rem;
-
 }
 
-.borderRight{
+.borderRight {
     height: 100%;
     width: 2px;
     position: absolute;
@@ -86,29 +76,23 @@
     right: 18px;
 }
 
-
-
-.tokens{
-   
-   display: flex;
-   justify-content: flex-start !important;
-   padding-left: 8px;
+.tokens {
+    display: flex;
+    justify-content: flex-start !important;
+    padding-left: 8px;
 }
 
-
-.tradeButton{
+.tradeButton {
     width: 25px;
-   
 }
 
-
- .poolName{
-   justify-content: flex-start !important; 
+.poolName {
+    justify-content: flex-start !important;
 }
-.no_results{
+.no_results {
     width: 100%;
     height: 200px;
-   
+
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -118,10 +102,10 @@
     gap: 8px;
 }
 
-.no_results button{
+.no_results button {
     width: 100%;
     max-width: 200px;
-   
+
     height: auto;
     outline: none;
     padding: 4px 8px;
@@ -139,12 +123,11 @@
     color: var(--text1);
 }
 
-
-.no_results button:hover{
-    color: var(--text2)
+.no_results button:hover {
+    color: var(--text2);
 }
 
-.spinner_container{
+.spinner_container {
     position: absolute;
     top: 0;
     left: 0;
@@ -156,39 +139,44 @@
 }
 
 @media only screen and (min-width: 768px) {
-
-    .mainContainer{
+    .mainContainer {
         border: none;
     }
-    .no_results{
+    .no_results {
         height: 70%;
     }
 
-    .headerContainer{
+    .headerContainer {
         gap: 8px;
     }
 
+    .gridHeaderItem {
+        width: 70px;
+        justify-content: flex-end;
+    }
 
-.gridHeaderItem{
-   
-    width: 70px;
-    justify-content: flex-end;
-   
-   
-}
-
-
-.tradeButton{
-    width: 70px;
-}
+    .tradeButton {
+        width: 70px;
+    }
 }
 
 @media only screen and (min-width: 1024px) {
-    .headerItems, .gridHeaderItem{
+    .headerItems,
+    .gridHeaderItem {
         font-size: 14px;
     }
-    .gridHeaderItem, .tradeButton, .tradeButton, .poolName{
+    .gridHeaderItem,
+    .tradeButton,
+    .tradeButton,
+    .poolName {
+        width: 100px;
+    }
+}
+@media only screen and (min-width: 1280px) {
+    .gridHeaderItem,
+    .tradeButton,
+    .tradeButton,
+    .poolName {
         width: 133px;
     }
-
 }
