--- a/src/components/Global/Explore/PoolRow/PoolRow.module.css
+++ b/src/components/Global/Explore/PoolRow/PoolRow.module.css
@@ -14,6 +14,14 @@
     /* padding: 0 8px; */
 }
 
+.gridContainer:hover{
+    background: var(--dark2);
+    transition: all var(--animation-speed) ease-in-out;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+
 .gridItem {
     box-sizing: border-box;
     display: flex;
@@ -71,14 +79,28 @@
 }
 
 @media only screen and (min-width: 1024px) {
+
+  
     .gridItem,
     .tradeButton,
     .tradeButton,
     .poolName {
-        width: 133px;
+        width: 100px;
+       
     }
 
     .gridItem {
         font-size: 14px;
     }
+}
+@media only screen and (min-width: 1280px) {
+    .gridItem,
+    .tradeButton,
+    .tradeButton,
+    .poolName {
+        width: 133px;
+        
+    }
+
+   
 }
