--- a/src/components/Global/TutorialOverlay/TutorialOverlayUrlBased.module.css
+++ b/src/components/Global/TutorialOverlay/TutorialOverlayUrlBased.module.css
@@ -42,4 +42,11 @@
     }
 }
 
+.connectButton{
+    background: var(--accent1, #0ccdff);
+    padding: 0 .5rem;
+    margin: 0 .5rem;
+    cursor: pointer;
+    border: none;
+}
     
