fix futa scroll issue

--- a/src/pages/platformFuta/Account/Account.module.css
+++ b/src/pages/platformFuta/Account/Account.module.css
@@ -167,4 +167,10 @@
     .claimButton {
         margin: 5px 0;
     }
+
+    .container {
+      
+        height: calc(100svh - 280px);
+       
+    }
 }
