--- a/src/components/Futa/SearchableTicker/SearchableTicker.module.css
+++ b/src/components/Futa/SearchableTicker/SearchableTicker.module.css
@@ -245,6 +245,7 @@
     height: 100%;
     overflow-y: scroll;
     scrollbar-color: var(--dark2) var(--dark2);
+    padding-bottom: 1rem;
 }
 .scrolling{
     scrollbar-color: var(--accent1) var(--dark2);
@@ -351,10 +352,12 @@
         padding-bottom: 0;
     }
 
+    .tickerTableContent{
+        margin-bottom: 3rem;
+    }
+
 }
-.tickerTableContent{
-    padding-bottom: 1rem;
-}
+
 
 .container{
     display: flex;
