--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,8 @@
     --swap-border: var(--title-gradient);
     --grey-light-border: 1px solid var(--text2);
     --navbar-border: transparent;
-    --dark-border: 0.2px solid #010101;
+    --dark-border-color: #010101;
+    --dark-border: 0.2px solid var(--dark-border-color);
 
     /* transitions */
     --transition: all var(--animation-speed) ease-in-out;
@@ -78,8 +79,15 @@
     --footer-height: 24px;
 
     /* gradients, shadows */
-    --shimmer: linear-gradient(to right, #141e30, #243b55);
-    --gradient-box-shadow: 0px 0px 20px 0px rgba(115, 113, 252, 0.25) inset;
+    --shimmer-start-color: #141E30;
+    --shimmer-end-color: #243b55;
+    --shimmer: linear-gradient(
+        to right,
+        var(--shimmer-start-color),
+        var(--shimmer-end-color)
+    );
+    --gradient-box-shadow-color: rgba(115, 113, 252, 0.25);
+    --gradient-box-shadow: 0px 0px 20px 0px var(--gradient-box-shadow-color) inset;
 
     --title-gradient: linear-gradient(
         90deg,
@@ -166,8 +174,9 @@
 
 [data-theme='futa_dark'] {
     /* subtract full height from navbar(56px) and footer(20px on desktop, 64 on mobile) */
-    --content-height: calc(100vh - 76px) --content-height-mobile:
-            calc(100svh - 120px) /* font */ --title-ts: 0px 0px 150px
+    --content-height: calc(100vh - 76px);
+    --content-height-mobile: calc(100svh - 120px);
+    --title-ts: 0px 0px 150px
             rgba(242, 153, 74, 0.5),
         0px 0px 100px rgba(242, 153, 74, 0.5),
         0px 0px 30px rgba(242, 153, 74, 0.5),
